Reapply Java 8 changes